# devlog

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  requirements.txt
.github/: commit_template.txt
.github/workflows/: cd.yml  ci.yml
apps/users/: admin.py  models.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py
apps/users/social_login/: __init__.py  google_service.py
config/: urls.py
config/settings/: base.py  local.py
templates/users/: index.html
